--- a/views/pages/options.ejs
+++ b/views/pages/options.ejs
@@ -151,7 +151,7 @@
     </a>
 
     <!--  Markup for notice -->
-    <a href="/options/notice">
+    <!-- <a href="/options/notice">
       <div class="options-card">
         <div class="card-icon">
           <svg
@@ -185,7 +185,7 @@
         <p class="card-title">Notice</p>
         <p class="card-text">Click to add your notice.</p>
       </div>
-    </a>
+    </a> -->
   </div>
 </div>
 <%- include("../partials/footer"); -%>
