--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,19 @@
 </main>
+
+<script>
+     const startDatePicker = MCDatepicker.create({
+        el: "#startPicker",
+        dateFormat: "DD-MM-YYYY",
+      });
+  const endDatePicker = MCDatepicker.create({
+        el: "#endPicker",
+        dateFormat: "DD-MM-YYYY",
+      });
+;
+
+</script>
 <script src="<%=baseUrl%>/main.js"></script>
-<script src="<%=baseUrl%>/startData.js"></script>
+
+
 </body>
 </html>
