--- a/views/pages/users.ejs
+++ b/views/pages/users.ejs
@@ -105,11 +105,14 @@
       <% users.map(user=>{%>
       <tr>
         <td class="table-img td-width-zero">
+          <% if(user.avatar !== null && user.avatar.match(/^(http|https):/g)){
+          %>
+          <img src="<%= user.avatar%>" />
+          <%} else{%>
           <img
-            src="/uploads/avatars/<%=user.avatar== null ? 'demo-avatar.png':user.avatar
-              %> "
-            alt=""
+            src="/uploads/avatars/<%=user.avatar != null ?  user.avatar : 'demo-avatar.png' %>"
           />
+          <% } %>
         </td>
         <td>
           <div class="username"><%=user.user_name%></div>
