--- a/views/partials/side-nav.ejs
+++ b/views/partials/side-nav.ejs
@@ -1,7 +1,7 @@
 <div class="sidebar">
   <div class="logo-content">
     <div class="logo">
-     <a href="/"> <img src="/icons/logo.svg" alt="" /></a>
+      <a href="/"> <img src="/icons/logo.svg" alt="" /></a>
     </div>
   </div>
   <ul class="nav-list">
@@ -34,19 +34,20 @@
   </ul>
   <%- include("./more-option"); -%> <%- include("./notification"); -%>
   <div class="sidebar-footer">
-    <% console.log('profie',profile.avatar)%>
-    <% if(profile.avatar !== null && profile.avatar.match(/^(http|https):/g)){ %>
-      <img
+    <% if(profile.avatar !== null && profile.avatar.match(/^(http|https):/g)){
+    %>
+    <img
       id="notification-btn"
       class="notification-btn"
       src="<%= profile.avatar%>"
-      />
-  <%} else{%>
+    />
+    <%} else{%>
     <img
-    id="notification-btn"
+      id="notification-btn"
       class="notification-btn"
-    src="/uploads/avatars/<%=profile.avatar != null ?  profile.avatar : 'demo-avatar.png' %>" />
-    <% } %> 
+      src="/uploads/avatars/<%=profile.avatar != null ?  profile.avatar : 'demo-avatar.png' %>"
+    />
+    <% } %>
 
     <div class="username"><%= profile.user_name %></div>
     <div id="more-btn" class="more">
