--- a/views/pages/users.ejs
+++ b/views/pages/users.ejs
@@ -2,12 +2,13 @@
 
 <style>
   .hidden-menu {
-    max-height: 0;
     overflow: hidden;
+    max-height: 0;
     -webkit-transition: max-height 0.4s;
     -moz-transition: max-height 0.4s;
     transition: max-height 0.4s;
     position: relative;
+    z-index: 1;
   }
   .hidden-menu ul li a {
     text-decoration: none !important;
@@ -18,10 +19,10 @@
     max-height: 130px;
   } */
   .hidden-menu-show {
-    max-height: 130px;
     position: absolute;
+    max-height: 110px;
     width: 130px;
-    height: 130px;
+    height: 110px;
     padding: 6px;
     border-radius: 15px;
     background: #ffffff;
@@ -47,6 +48,7 @@
     margin: 0 5px;
     list-style: none;
     line-height: 20px;
+    cursor: pointer;
   }
 
   .hidden-menu-show li a svg {
@@ -72,6 +74,29 @@
   /* #users table tr td:last-child {
     width: 80px;
   } */
+
+  /* Modal btn style */
+  .modal-btn-container {
+    margin-top: 20px;
+  }
+  .modal-delete-btn,
+  .modal-cancel-btn {
+    background-color: #103047;
+    border-radius: 10px;
+    color: #fff;
+    padding: 8px 12px;
+    border: none;
+    outline: none;
+    font-size: 12px;
+    font-weight: 500;
+    cursor: pointer;
+  }
+  .modal-delete-btn {
+    background-color: #ff0000;
+  }
+  #delete-modal {
+    display: none;
+  }
 </style>
 
 <div id="users">
@@ -121,7 +146,7 @@
         <td class="user-phone"><%=user.user_phone %></td>
         <td class="user-email"><%=user.user_mail %></td>
         <td class="user-status"><span class="status active">Active</span></td>
-        <td class="user-more td-width-zero" onclick="openMenu(this)">
+        <td class="user-more td-width-zero user-more-btn">
           <svg
             class="user-action-btn"
             width="40"
@@ -144,17 +169,19 @@
                 </a>
               </li>
               <li>
-                <a href="/update-user/<%= user.id %>">
-                  <%# include("./icons/logout-svg.ejs"); -%>
-                  <span>Update</span>
+                <a href="/profile/<%= user.id %>">
+                  <%# include("./icons/profile-svg.ejs"); -%>
+                  <span>Profile</span>
                 </a>
               </li>
+
               <li>
-                <a
-                  onclick="return confirm('Are you Sure?')"
-                  href="/delete/user/<%= user.id %>"
-                >
-                  <%# include("./icons/logout-svg.ejs"); -%>
+                <a class="delete-user">
+                  <input
+                    class="delete-id"
+                    type="hidden"
+                    value="<%= user.id %>"
+                  />
                   <span>Delete</span>
                 </a>
               </li>
@@ -169,12 +196,33 @@
     </tbody>
   </table>
 </div>
+
+<!-- Markup for user delete modal -->
+<div id="delete-modal" class="modal-container">
+  <div class="modal">
+    <div class="modal-head">
+      <div class="modal-title">Confirmation !!!</div>
+      <div class="modal-close">
+        <%- include("../partials/icons/close-svg"); -%>
+      </div>
+    </div>
+    <div class="modal-content">
+      <div class="container">
+        <h5>Are you sure you want to delete this?</h5>
+
+        <div class="modal-btn-container">
+          <button class="modal-cancel-btn">Cancel</button>
+          <button class="modal-delete-btn">Delete</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
 <!-- Pagination -->
 <%- include("../partials/pagination"); -%>
 
 <script>
-  function openMenu(menu) {
-    //alert("ok");
+  /*  function openMenu(menu) {
     const currentMenu = menu.childNodes[3];
     console.log(currentMenu);
     const showMenu = document.querySelector(".hidden-menu-show");
@@ -182,9 +230,57 @@
     if (!currentMenu.classList.contains("hidden-menu-show") && showMenu) {
       showMenu.classList.remove("hidden-menu-show");
     }
+
     currentMenu.classList.toggle("hidden-menu-show");
+  } */
+  // const userAction = document.getElementsByClassName("hidden-menu");
+  // const showMenu = document.querySelector(".hidden-menu-show");
+
+  const userMoreBtn = document.querySelectorAll(".user-more-btn");
+
+  for (let i = 0; i < userMoreBtn.length; i++) {
+    userMoreBtn[i].addEventListener("click", function () {
+      // console.log(this.parentNode.childNodes[11].childNodes[3]);
+      const currentMenu = this.childNodes[3];
+      console.log(currentMenu);
+      const showMenu = document.querySelector(".hidden-menu-show");
+
+      if (!currentMenu.classList.contains("hidden-menu-show") && showMenu) {
+        showMenu.classList.remove("hidden-menu-show");
+      }
+
+      currentMenu.classList.toggle("hidden-menu-show");
+    });
   }
-  const userAction = document.getElementsByClassName("hidden-menu");
+
+  //
+
+  //
+  const deleteUser = document.querySelectorAll(".delete-user");
+  const deleteModal = document.getElementById("delete-modal");
+  const deleteId = document.querySelectorAll(".delete-id");
+  const deleteBtn = document.querySelectorAll(".modal-delete-btn");
+  const cancelBtn = document.querySelectorAll(".modal-cancel-btn");
+  const modalClose = document.querySelector(".modal-close");
+  for (let i = 0; i < deleteUser.length; i++) {
+    deleteUser[i].addEventListener("click", () => {
+      //alert("delete");
+      deleteModal.style.display = "block";
+      console.log(deleteId[i].value);
+
+      deleteBtn[0].addEventListener("click", () => {
+        console.log(deleteId[i].value);
+        window.location.href = `/delete/user/${deleteId[i].value}`;
+      });
+      cancelBtn[0].addEventListener("click", () => {
+        deleteModal.style.display = "none";
+      });
+      modalClose.addEventListener("click", () => {
+        alert("close");
+        deleteModal.style.display = "none";
+      });
+    });
+  }
 </script>
 
 <script>
