--- a/views/pages/leavedays.ejs
+++ b/views/pages/leavedays.ejs
@@ -228,7 +228,7 @@
           <% } %>
         </td>
         <td>
-          <div class="username"><%=user.name%></div>
+          <div class="username"><%=user.user_name%></div>
           <span id="role"><%= user.user_role==='admin'? 'admin' : ''%> </span>
         </td>
         <td>
