--- a/views/pages/projects.ejs
+++ b/views/pages/projects.ejs
@@ -61,6 +61,7 @@
     <thead>
       <tr>
         <td>SL</td>
+        <td>Date</td>
         <td class="project-table-title">Project Name</td>
         <td>Project Details</td>
       </tr>
@@ -69,10 +70,12 @@
       <% projects.map((project,idx)=>{ %>
       <tr>
         <td><%= idx + 1 %></td>
+        <td><%= project.date %></td>
         <td class="project-table-title title-value">
           <%= project.project_name %>
         </td>
         <td class="project-details"><%= project.project_details %></td>
+        <%if(loggedInUser.userRole==='admin'){ %>
         <td class="btn-group">
           <button type="button" class="action-btn">Action</button>
           <button type="button" class="update-btn">Update</button>
@@ -80,11 +83,12 @@
           <button type="button" class="save-btn">Save</button>
           <input type="hidden" class="project-id" value="<%= project.id %>" />
         </td>
+        <% } %>
       </tr>
       <%}) %>
     </tbody>
   </table>
 </div>
 
-<script type="module" src="<%= baseUrl %>/js/project.js"></script>
+<script src="<%= baseUrl %>/js/project.js"></script>
 <%- include("../partials/footer"); -%>
