--- a/views/pages/leavedays.ejs
+++ b/views/pages/leavedays.ejs
@@ -120,22 +120,13 @@
     </div>
     <div class="date-picker">
       <div class="start-date">
-        <input
-          onblur="iconCheck()"
-          id="startPicker"
-          type="text"
-          placeholder="-- / -- / ----"
-        />
+        <input id="startPicker" type="text" placeholder="-- / -- / ----" />
       </div>
       <div class="to">to</div>
       <div class="end-date">
-        <input
-          onblur="iconCheck()"
-          id="endPicker"
-          placeholder="-- / -- / ----"
-        />
+        <input id="endPicker" placeholder="-- / -- / ----" />
       </div>
-      <div id="date-icon" onclick="dateRange()" class="date-icon">
+      <div id="date-icon" class="date-icon">
         <svg
           width="26"
           height="30"
@@ -247,6 +238,9 @@
 </div>
 
 <script>
+  const baseUrl = "<%= baseUrl %>";
+  const loggedInUser = "<%= loggedInUser.userRole %>";
+  //
   const actionBtn = document.querySelectorAll(".action-btn");
   const updateBtn = document.querySelectorAll(".update-btn");
   const saveBtn = document.querySelectorAll(".save-btn");
@@ -336,6 +330,61 @@
       // return window.location.replace("/options/holiday");
     });
   }
+
+  // pagination
+  const dateIcon = document.querySelector("#date-icon");
+  dateIcon.addEventListener("click", async () => {
+    const dateStart = document.querySelector("#startPicker");
+    const dateEnd = document.querySelector("#endPicker");
+    const startDate = dateFormate(startDatePicker.getFullDate());
+    const endDate = dateFormate(
+      endDatePicker.getFullDate() || getCurrentDate()
+    );
+    dateStart.dataset.date = startDate;
+    dateEnd.dataset.date = endDate;
+
+    console.log(startDate, endDate);
+
+    if (dateStart.dataset.date === "null") {
+      return alert("date not select");
+    }
+
+    const data = await fetch(
+      `${baseUrl}/options/leavedays/between-two-date?startDate=${startDate}&endDate=${endDate}`
+    );
+
+    const leavedays = await data.json();
+    console.log(leavedays);
+
+    if (leavedays.length === 0) {
+      return alert("No Holiday Found");
+    }
+  });
+
+  // helper function
+  //
+  const dateFormate = (date) => {
+    if (date === null) {
+      return null;
+    }
+    const today = new Date(date);
+    const month = today.getMonth() + 1;
+    const year = today.getFullYear();
+    const day = today.getDate() < 10 ? `0${today.getDate()}` : today.getDate();
+    const getDate = `${year}-${month < 10 ? `0${month}` : month}-${day}`;
+
+    return getDate;
+  };
+
+  // get current date
+  const getCurrentDate = () => {
+    const today = new Date();
+    const dd = String(today.getDate()).padStart(2, "0");
+    const mm = String(today.getMonth() + 1).padStart(2, "0");
+    const yyyy = today.getFullYear();
+
+    return `${yyyy}-${mm}-${dd}`;
+  };
 </script>
 
 <%- include("../partials/footer"); -%>
