update button add

--- a/views/pages/users.ejs
+++ b/views/pages/users.ejs
@@ -169,10 +169,10 @@
                 </a>
               </li>
               <li>
-                <a href="/profile/<%= user.id %>">
-                  <%# include("./icons/profile-svg.ejs"); -%>
-                  <span>Profile</span>
-                </a>
+                <a href="/update-user/<%= user.id %>">
+                  <%# include("./icons/logout-svg.ejs"); -%>
+                  <span>Update</span>
+                  </a>
               </li>
 
               <li>
